# time-tino

./: README.md  run.sh
backend/: .gitignore  pyproject.toml
backend/src/time_tino_backend/: main.py
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts  item-utils.ts  item.ts
frontend/src/app/core/providers/: ItemService.model.ts  MockItemService.ts  PythonItemService.ts
frontend/src/app/features/listentry/: listentry.html  listentry.spec.ts  listentry.ts
frontend/src/app/features/tagselector/: tagselector.html  tagselector.spec.ts  tagselector.ts
frontend/src/app/features/tagselector-wrapper/: tagselector-wrapper.html  tagselector-wrapper.spec.ts  tagselector-wrapper.ts
frontend/src/app/features/timeinput/: timeinput.html  timeinput.spec.ts  timeinput.ts
frontend/src/app/listentry/: listentry.css  listentry.html  listentry.ts
frontend/src/app/overlay/: overlay.css  overlay.html  overlay.ts
frontend/src/app/providers/: DataService.ts  PythonItemService.ts
frontend/src/app/shared/components/overlay/: overlay.spec.ts  overlay.ts
frontend/src/app/shared/models/: Item.ts
frontend/src/app/timeinput/: timeinput.css  timeinput.html  timeinput.ts
