[project]
name = "time-tino-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "=",email = "hannes.vinzens@fau.de"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]

[tool.poetry]
packages = [{include = "time_tino_backend", from = "src"}]

[tool.poetry.scripts]
time-tino-backend = "uvicorn time_tino_backend.main:app --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
